--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id 'java'
-    id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'test'
-version = '1.0-SNAPSHOT'
+version = '1.2-SNAPSHOT'
 sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
@@ -30,6 +30,7 @@ compileJava {
 dependencies {
     compileOnly "io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT"
     implementation "co.aikar:acf-paper:0.5.1-SNAPSHOT"
+    implementation "dev.triumphteam:triumph-gui:3.1.2"
 }
 
 def targetJavaVersion = 17
@@ -59,5 +60,6 @@ processResources {
 shadowJar{
     relocate 'co.aikar.commands', 'test.testplagin.acf'
     relocate 'co.aikar.locales', 'test.testplagin.locales'
+    relocate("dev.triumphteam.gui", "test.testplagin.gui")
 }
 build.dependsOn shadowJar
